@@ -76,6 +76,9 @@ with all sufficient information, see the ChangeLog file or Redmine
 === Stdlib updates (outstanding ones only)
 
 * Net::HTTP
+  * Add more HTTP status classes
+
+* Net::HTTP
   * Net::HTTP#proxy_user and Net::HTTP#proxy_pass now reflects http_proxy
     environment variable if the system's environment variable is multiuser
     safe. [Bug #12921]
